[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-aki"
version = "1.0.1"
description = "FastAPI-inspired Web Application Framework"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [ { name = "Nercone", email = "nercone@nercone.dev" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "nercone-kaede"
]

[project.urls]
GitHub = "https://github.com/nercone-aki/aki/"

[tool.uv.build-backend]
module-name = "aki"
